--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
 									<div class="row justify-content-center">
 										
 										<div class="col-xl-10 col-lg-11" data-aos="zoom-in" data-aos-delay="0">
-											<a href="map.html">
-											<img src="i/mapimg.png" alt="" class="img-fluid radius10" srcset="i/mapimg.png">
+											<a href="map.html" target="_blank">
+												<img src="i/mapimg.png" alt="" class="img-fluid radius10" srcset="i/mapimg.png" >
 											</a>
 											<div class="mt-10 f-14 semibold text-uppercase sp-20 color-heading text-center text-sm-right">
 												<a href="https://acleddata.com/curated-data-files/">Data Source</a>
