legend1 position needs fix

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 		</style>
 
 		<style>
+			#legend1 {
+				margin-left: 10%;
+			}
+
 			.axis text {
 			font: 10px sans-serif;
 			}
@@ -455,7 +459,7 @@
 											<section class="pt-80 pb-60 bg-light content_21">
 												<div class="container px-xl-0">
 													<div class="row justify-content-center">
-														<div id="legend1"></div>
+														<!-- <div id="legend1"></div> -->
 														<div id="vis">
 															<button id="play-button">Play</button>
 														</div>
@@ -463,6 +467,7 @@
 														<div id="tooltip"></div>
 														
 														<svg id="map3" width="750" height="480"></svg>
+														
 														<!-- <div class="col-xl-10 col-lg-11" data-aos="zoom-in" data-aos-delay="0">
 															<img src="i/content_21_img.jpg" srcset="i/content_21_img@2x.jpg 2x" alt="" class="img-fluid radius10">
 															<div class="mt-10 f-14 semibold text-uppercase sp-20 color-heading text-center text-sm-right">
@@ -470,6 +475,7 @@
 															</div>
 														</div> -->
 													</div>
+													<div id="legend1"></div>
 												</div>
 											</section>
 											<!-- Blog 14 -->
