--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 		</style>
 
 		<style>
+			li {
+				font-size: 15px;
+				font-weight: normal;
+			}
+
 			#legend1 {
 				margin-left: 200px;
 			}
@@ -285,20 +290,53 @@
 						<div class="col-xl-10">
 							<div class="row flex-md-row-reverse justify-content-md-end">
 								<div class="col-lg-4 col-md-6 bg-light radius20 pt-40 pb-40 px-40 mx-15 mx-sm-0 block_tip" data-aos="zoom-in" data-aos-delay="0">
-									<div class="text-center action-2 f-22 text-adaptive">
-										AAAAAAAAAAAAAA
+									<div class="text-left action-2 f-22 text-adaptive">
+										<h3 class="text-center">Stats</h3>
+										<bl>
+											<li>79.5 million forcibly displaced people worldwide at the end of 2019.</li>
+											<li>At least 79.5 million people around the world have been forced to flee their homes. </li>
+											<li>Among them are nearly 16 million refugees, around half of whom are under the age of 18</li>
+											<li>1% of the world’s population have fled their homes as a result of conflict or persecution</li>
+										</bl>
 									</div>
 								</div>
 								<div class="col-lg-1">
 								</div>
 								<div class="col-lg-6 color-white mt-4 mt-lg-0">
-									<h2 class="semibold f-22" data-aos="zoom-in" data-aos-delay="250">
-										Backgrond Information on Refugee
+									<h2 class="semibold f-40" data-aos="zoom-in" data-aos-delay="250">
+										Background Information on Refugee Situation
 									</h2>
 									<div class="mt-15 medium op-7 text-adaptive f-20" data-aos="zoom-in" data-aos-delay="500">
-										AAAAAAAAAAAAAA
+										<h3 class="f-26 text-center">Definition</h3>
+										<bl>
+											<li class="f-18">
+												Refugee ---
+													The classification for someone who is forced to flee their country of origin due to conflict, violence, or persecution.
+													They are unable or unwilling to return based on a demonstrable threat due to their race, religion, political stance, or social status.
+											</li>
+											<li class="f-18">
+												Asylum Seeker ---
+													The classification for someone who is seeking international protection from danger in their country of origin, but whose claim for refugee status hasn’t been finally decided.
+											</li>
+											<li class="f-18">
+												EVERY REFUGEE BEGINS AS AN ASYLUM-SEEKER, BUT NOT EVERY ASYLUM-SEEKER WILL BE GRANTED REFUGEE STATUS.
+											</li>
+										</bl>
 									</div>
 								</div>
+								<!-- <div class="col-lg-6 color-white mt-4 mt-lg-0">
+									<div class="mt-15 medium op-7 text-adaptive f-20" data-aos="zoom-in" data-aos-delay="500">
+										New	
+									</div>
+								</div>
+								<div class="col-lg-1">
+								</div>
+								<div class="col-lg-4 col-md-6 bg-light radius20 pt-40 pb-40 px-40 mx-15 mx-sm-0 block_tip" data-aos="zoom-in" data-aos-delay="0">
+									<div class="text-center action-2 f-22 text-adaptive">
+										BBBBBB
+									</div>
+								</div> -->
+
 							</div>
 						</div>
 					</div>
