--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 					<div class="row justify-content-center">
 						<div class="col-xl-10">
 							<div class="row flex-md-row-reverse justify-content-md-end">
-								<div class="col-lg-4 col-md-6 bg-light radius20 pt-40 pb-40 px-40 mx-15 mx-sm-0 block_tip" data-aos="zoom-in" data-aos-delay="0">
+								<div class="col-lg-4 col-md-6 bg-light radius20 pt-40 pb-40 px-20 mx-15 mx-sm-0 block_tip" data-aos="zoom-in" data-aos-delay="0">
 									<div class="text-left action-2 f-22 text-adaptive">
 										<h3 class="text-center">Stats</h3>
 										<bl>
@@ -421,16 +421,16 @@
 									<div class="col-xl-10 px-0 color-heading f-18" data-aos="zoom-in" data-aos-delay="500">
 										<ul>
 											<li>
-												International organizations have criticized all sides involved of severe human rights violations and massacres.
+												International organizations have criticized all sides involved of severe human rights violations and massacres
 											</li>
 											<li>
-												In the first five years of the war, an estimated of 400,000 Syrians were killed.
+												In the first five years of the war, an estimated of 400,000 Syrians were killed
 											</li>
 											<li>
-												This conflict has caused a major refugee crisis.
+												This conflict has caused a major refugee crisis
 											</li>
 											<li>
-												As of April 2020, roughly 5.6 million Syrians have fled the country, and more than 6.3 million people are displaced internally.
+												As of April 2020, roughly 5.6 million Syrians have fled the country, and more than 6.3 million people are displaced internally
 											</li>
 										</ul>
 									</div>
@@ -442,7 +442,7 @@
 										</a>
 									</div>
 									<div class="mt-30 color-main medium text-adaptive f-18" data-aos="zoom-in" data-aos-delay="1000">
-										Click on the video above to learn more about the Syrian refugee situation.
+										Click on the video above to learn more about the Syrian refugee situation
 									</div>
 								</div>
 								 
@@ -458,7 +458,7 @@
 											Conflicts in the Middle East
 										</div>
 										<div class="mt-15 f-22 text-adaptive" data-aos="zoom-in" data-aos-delay="250">
-											Click on the map below that showcases the number, location as well as fatalities of the conflicts in the Middle East region over the past 5 years.
+											Click on the map below that showcases the number, location as well as fatalities of the conflicts in the Middle East region over the past 5 years
 										</div>
 									</div>
 								</div>
@@ -481,17 +481,23 @@
 								</div>
 							</section>
 							<!-- Content 8 -->
-								<section class="pt-105 pb-100 bg-light content_8">
-									<div class="container px-xl-0">
-										<div class="row justify-content-center text-center">
-											<div class="col-lg-8 col-md-10">
-												<h2 class="small" data-aos="zoom-in" data-aos-delay="0">
-													A Big Impactful Quote
-												</h2>
+							<section class="pt-30 pb-45 bg-dark content_7">
+								<div class="container px-xl-0">
+									<div class="row justify-content-center text-center color-white">
+										<div class="col-lg-8 col-md-10">
+											<div class="semibold text-uppercase sp-20 f-20" data-aos="zoom-in" data-aos-delay="0">
+												The estimated number of total deaths in the syrian Civil War vary between 384,000 and 588,660 as of May 2020.
+											</div>
+											<div class="mt-15 f-22 text-left" data-aos="zoom-in" data-aos-delay="250">
+												<ul>
+													<li>It is approximately 2% of Syria’s pre-war population</li>
+													<li>Around 22.093 children killed in the conflict</li>
+												</ul>
 											</div>
 										</div>
 									</div>
-								</section>
+								</div>
+							</section>
 								<!-- Content 21 -->
 									<section class="pt-80 pb-60 bg-light content_21">
 										<div class="container px-xl-0">
