--- a/info.html
+++ b/info.html
@@ -203,7 +203,7 @@
 							</div>
 							<div class="mt-60 col-lg-4 col-md-7 col-sm-10" data-aos="fade-down" data-aos-delay="250">
 								<div class="radius10 pt-50 block">
-									<img src="i/team_1_img_2.jpg" alt="" class="radius_full" srcset="i/team_1_img_2@2x.jpg 2x">
+									<img src="i/hehehe.jpg" alt="" class="radius_full mw-230" srcset="i/hehehe.jpg">
 									<div class="mt-25 mb-15 f-22 title">
 										Zhihao (Jeffery) Guo
 									</div>
@@ -232,6 +232,17 @@
 						</div>
 					</div>
 				</section>
+			<!-- Footer 12 -->
+			<footer class="pt-80 pb-50 bg-dark color-white text-center footer_12">
+				<div class="container px-xl-0">
+					<div class="lh-40 f-18 medium" data-aos="zoom-in" data-aos-delay="0">
+					
+					</div>
+					<div class="mt-60 text-adaptive" data-aos="zoom-in" data-aos-delay="250">
+						© 2020 Boston College CSCI3311 Team 8. All rights reserved.
+					</div>
+				</div>
+			</footer>
 		<!-- forms alerts -->
 		<div class="alert alert-success alert-dismissible fixed-top alert-form-success" role="alert">
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
