--- a/info.html
+++ b/info.html
@@ -2,9 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" >
-		<title>Startup 4.2 - Project</title>
+		<title>Project Information Page</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="i/favicon.png" type="image/x-icon">
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@100;200;300;400;500;600;700;800;900&family=DM+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<!-- Bootstrap 4.5.2 CSS -->
@@ -243,40 +242,12 @@
 					</div>
 				</div>
 			</footer>
-		<!-- forms alerts -->
-		<div class="alert alert-success alert-dismissible fixed-top alert-form-success" role="alert">
-			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			Thanks for your message!
-		</div>
-		<div class="alert alert-warning alert-dismissible fixed-top alert-form-check-fields" role="alert">
-			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			Please, fill in required fields.
-		</div>
-		<div class="alert alert-danger alert-dismissible fixed-top alert-form-error" role="alert">
-			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			<div class="message">An error occurred while sending data :( Please, check if your hosting supports PHP and check how to set form data sending <a href="https://designmodo.com/startup/documentation/#form-handler" target="_blank" class="link color-transparent-white">here</a>.</div>
-		</div>
+		
 
-		<!-- gReCaptcha popup (uncomment if you need a recaptcha integration) -->
-		<!--
-		<div class="bg-dark op-8 grecaptcha-overlay"></div>
-		<div class="bg-light radius10 w-350 h-120 px-20 pt-20 pb-20 grecaptcha-popup">
-			<div class="w-full h-full d-flex justify-content-center align-items-center">
-				<div id="g-recaptcha" data-sitekey="PUT_YOUR_SITE_KEY_HERE"></div>
-			</div>
-		</div>
-		<script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
-		-->
 		<!-- Bootstrap 4.5.2 JS -->
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 		<!-- Fancybox 3 jQuery plugin JS (Open images and video in popup) -->
 		<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-		<!-- 
-			Google maps JS API 
-			Don't forget to replace the key "AIzaSyDP6Ex5S03nvKZJZSvGXsEAi3X_tFkua4U" to your own! 
-			Learn how to get a key: https://help.designmodo.com/article/startup-google-maps-api/ 
-		-->
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDP6Ex5S03nvKZJZSvGXsEAi3X_tFkua4U"></script>
 		<!-- Slick 1.8.1 jQuery plugin JS (Sliders) -->
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 		<!-- AOS 2.3.4 jQuery plugin JS (Animations) -->
