--- a/map.html
+++ b/map.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>
+<title>Middle East Conflicts Map</title>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://d3js.org/topojson.v2.min.js"></script>
 <link rel="stylesheet" href="css/map.css"></link>
