--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 		</style>
 
 		<style>
+			#temp {
+				margin-left: 30%;
+			}
+
 			li {
 				font-size: 15px;
 				font-weight: normal;
@@ -470,7 +474,7 @@
 														</div>
 													</div>
 												</section>
-												<div class="mt-4 mt-md-0 col-12 col-md-5">
+												<div class="mt-4 mt-md-0 col-12 col-md-5" id="temp">
 													<h4 class="mb-25 f-34" data-aos="zoom-in" data-aos-delay="500">
 														Intuition behind project
 													</h4>
