--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 														</div>
 													</div>
 												</section>
-												<div class="mt-4 mt-md-0 col-12 col-md-5" id="temp">
+												<!-- <div class="mt-4 mt-md-0 col-12 col-md-5" id="temp">
 													<h4 class="mb-25 f-34" data-aos="zoom-in" data-aos-delay="500">
 														Intuition behind project
 													</h4>
@@ -498,7 +498,7 @@
 													<h4 class="mb-25 f-34" data-aos="zoom-in" data-aos-delay="500">
 														Challenges Faced
 													</h4>
-													<p>One significant hurdle of this project was to locate reliable and usable sources of data as we spent hours searching for more data that would allow us to create more variety of graphs. As a result, the scope of the project is limited by the data we were able to obtain so in the end, while we wanted to go for a more story driven narrative, we could not come up with the corresponding visualizations for it. Moreover, breaking the barriers of the “normal” types of visualizations was a tough task for us as we struggled to come up with “innovative” solutions. Again, this may well have been due to the lack of data but we have certainly gained immense appreciation for the glorious and aesthetically-pleasing visualizations that we see on the internet.</p>
+													<p>One significant hurdle of this project was to locate reliable and usable sources of data as we spent hours searching for more data that would allow us to create more variety of graphs. As a result, the scope of the project is limited by the data we were able to obtain so in the end, while we wanted to go for a more story driven narrative, we could not come up with the corresponding visualizations for it. Moreover, breaking the barriers of the “normal” types of visualizations was a tough task for us as we struggled to come up with “innovative” solutions. Again, this may well have been due to the lack of data but we have certainly gained immense appreciation for the glorious and aesthetically-pleasing visualizations that we see on the internet.</p> -->
 
 												</div>
 												<section class="pt-100 pb-100 bg-light blog_14">
