--- a/index.html
+++ b/index.html
@@ -470,6 +470,11 @@
 																<div class="semibold text-uppercase sp-20 f-32" data-aos="zoom-in" data-aos-delay="0">
 																	Conclusion
 																</div>
+																<p>The Civil war in Syria is one of the biggest conflict in the world today, yet not many people know of it or are aware of the casualties, and consequences it has worldwide</p>
+																<p>“We are living on the edge of hell. We have been waiting for so long for the day that the world would hear our voice. I hope it is today.” <br>
+																	-Zoher, a Palestinian-Syrian refugee
+																</p>
+
 															</div>
 														</div>
 													</div>
