--- a/info.html
+++ b/info.html
@@ -163,7 +163,7 @@
 						<div class="col-lg-5 col-md-8 mt-40 mt-lg-0">
 							<div class="relative poster" data-aos="fade-down" data-aos-delay="250">
 								<img src="i/videoback-ground.jpg" alt="" class="img-fluid radius10 color-filter-light-3" srcset="i/video-background.jpg">
-								<a href="https://www.youtube.com/embed/RcTFVcoibI0?rel=0&amp;showinfo=0" class="play red" data-fancybox="feature_24_fancybox">
+								<a href="https://youtu.be/yJSL-MKbVzQ" class="play red" data-fancybox="feature_24_fancybox">
 									<i class="fas fa-play">
 									</i>
 								</a>
